--- a/src/App.css
+++ b/src/App.css
@@ -31,6 +31,7 @@
   justify-content: center;
   min-height: 100vh;
   background: linear-gradient(to bottom right, #0dbaa6, #026357);
+  flex-wrap: wrap;
 }
 
 .Group {
@@ -39,5 +40,38 @@
   min-width: 200px;
   background-color: white;
   color: #282c34;
+  border-radius: 5px;
+}
+
+.todo {
+  padding: 2px 10px;
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+  justify-content: flex-start;
+}
+
+.itemList {
+  display: flex;
+  flex-direction: row;
+  margin-left: 10px;
+  margin-bottom: 5px;
+}
+
+.button {
+  margin-left: 8px;
+  margin-bottom: 5px;
+  display: flex;
+  align-content: flex-end;
+  justify-content: flex-end;
+}
+
+.delete {
+  max-width: 10px;
+  display: flex;
+  justify-content: center;
+  background-color: #282c34;
+  color: white;
+  border: none;
   border-radius: 5px;
 }
